[package]
name = "mumble-protocol"
version = "0.3.0"
authors = ["Jonas Herzig <me@johni0702.de>"]
edition = "2018"
description = "Rust implementation of the Mumble protocol"
license = "MIT OR Apache-2.0"
repository = "https://github.com/johni0702/rust-mumble-protocol"

[features]
default = ["openssl"]
webrtc-extensions = []

[build-dependencies]
protobuf-codegen-pure = "2"

[dependencies]
bytes = "0.5"
byteorder = "1"
futures_codec = "^0.4"
protobuf = "2"
openssl = { version = "0.10", optional = true }

[dev-dependencies]
argparse = "0.2"
futures = "^0.3"
pin-utils = "0.1"
async-native-tls = "^0.3"
futures_codec = "^0.4"
async-std = { version = "^1.6", features = ["attributes"] }
futures-util = "^0.3"
futures-macro = "^0.3"
